--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css>
     <title>Discord</title>
 </head>
 <body>
@@ -28,7 +29,8 @@
         <div class="container-center">
             <!-- navigazione -->
             <h1>Il tuo posto per parlare</h1>
-            <p>Che tu faccia parte di un gruppo scolastico,gruppo di gamer,comunità artistica mondiale,o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assiame,Discord rende più semplice chiaccherare ogni giorno e ritrovarsi piu' spesso.  </p> 
+            <p>Che tu faccia parte di un gruppo scolastico,gruppo di gamer,comunità artistica mondiale,o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assiame,Discord rende più semplice chiaccherare ogni giorno e ritrovarsi piu' spesso.</p> 
+            <button id="button-mac"><i class="fas fa-long-arrow-alt-down"> </i>Scarica per Mac</button> <button id="button-nero">Apri discord nel tuo browser</button>
         </div>
         
         <!-- jumbo -->
