--- a/index.html
+++ b/index.html
@@ -31,20 +31,19 @@
             <h1>Il tuo posto per parlare</h1>
             <p>Che tu faccia parte di un gruppo scolastico,gruppo di gamer,comunità artistica mondiale,o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assiame,Discord rende più semplice chiaccherare ogni giorno e ritrovarsi piu' spesso.</p> 
             <button id="button-mac"><i class="fas fa-long-arrow-alt-down"> </i>Scarica per Mac</button> <button id="button-nero">Apri discord nel tuo browser</button>
-        </div>
-        
-        <!-- jumbo -->
-        <section>
-
-        </section>
-
+        </div>   
     </header>
-
     <!-- blocco principale -->
     <main>
         <!-- sezione tipo -->
         <section>
-
+            <div class="container-item">
+                <img id="img1-item" src="img/item1.svg" alt="">
+                <aside class="right">
+                    <h1 id="tit-primo-item">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p id="parag-primo-item">I server Discord sono organizzati in canali tematici in cui puoi collaborare,condividere o seplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </aside>
+            </div>
         </section>
 
         <!-- altre sezioni -->
