--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- sezione tipo -->
         <section>
             <div class="container-item">
-                <img id="img1-item" src="img/item1.svg" alt="">
+                <img id="img1-item" src="img/item1.svg" alt="item">
                 <aside class="right">
                     <h1 id="tit-primo-item">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
                     <p id="parag-primo-item">I server Discord sono organizzati in canali tematici in cui puoi collaborare,condividere o seplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
@@ -47,6 +47,15 @@
         </section>
 
         <!-- altre sezioni -->
+        <section>
+            <div class="sec-container-item">
+                <h1>Dove trovarsi è facile</h1>
+                <p>Mettiti comodo in un canale vocale quando hai tempo.Gli amici nel tuo server possono vedere che sei li' e unirsi istantaneamente senza dover chiamare.</p>
+                <aside class="img-item2"> 
+                    <img id="img2" src="img/item2.svg" alt="item">
+                </aside>
+            </div>
+        </section>
 
     </main>
 
